hard-gists/9220847/run.log
=== Docker Run Log for 9220847 ===
Started at: Mi 29. Okt 18:22:00 CET 2025

[2025-10-29 18:22:00] START: Running container for 9220847
[2025-10-29 18:22:00] SUCCESS: Container 0aad2ee9a2177b8074a033bfa93c28a0add75e158f60fedec7a0e5ce3726758f started for 9220847
=== Container logs for 9220847 ===
  File "/snippet.py", line 38
    print len(results), 'entities at', datetime.datetime.now()  # Progress and time tracker.
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9220847 ===
[2025-10-29 18:22:02] INFO: Container 0aad2ee9a2177b8074a033bfa93c28a0add75e158f60fedec7a0e5ce3726758f has stopped
